Menambahkan Kodingan Database sqlite dan membuat layout rincian kegiatan

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.d3ifcool.rememberactivities">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +20,8 @@
         </activity>
         <activity android:name=".HomeActivity" />
         <activity android:name=".TambahKegiatanActivity" />
-        <activity android:name=".LihatKegiatanActivity"></activity>
+        <activity android:name=".LihatKegiatanActivity" />
+        <activity android:name=".RincianKegiatanActivity"></activity>
     </application>
 
 </manifest>
