--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
             android:value="@string/google_maps_key"/>
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
+        <receiver android:name=".Alarm.AlarmRecivier"
+            android:process=":remote"/>
+        <receiver android:name=".Alarm.SecondAlarmRecivier"
+            android:process=":remote"/>
     </application>
 
 </manifest>
