--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
@@ -36,6 +36,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.google.android.gms:play-services-places:11.8.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
 
     //testing
     testImplementation 'junit:junit:4.12'
