--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:design:27.1.1-alpha1'
 
     //core
     implementation 'com.android.support:recyclerview-v7:27.1.1'
@@ -37,13 +38,11 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.google.android.gms:play-services-places:11.8.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-
-
     //testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.android.support:design:27.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
