--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,15 @@
     package="org.d3ifcool.rememberactivities">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="false"
-        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -28,14 +28,13 @@
         <activity
             android:name=".TambahKegiatanActivity"
             android:label="Tambah Kegiatan" />
-        <activity android:name=".LihatKegiatanActivity"
-            android:label="Lihat Kegiatan"/>
-        <activity android:name=".RincianKegiatanActivity"
-            android:label="Rincian Kegiatan"/>
-        <activity android:name=".PopupActivity" />
         <activity
-            android:name=".TentangKamiActivity"
-            android:label="Tentang Kami" />
+            android:name=".LihatKegiatanActivity"
+            android:label="Lihat Kegiatan" />
+        <activity
+            android:name=".RincianKegiatanActivity"
+            android:label="Rincian Kegiatan" />
+        <activity android:name=".PopupActivity" />
         <activity
             android:name=".LihatPencapaianActivity"
             android:label="Lihat Pencapaian" />
@@ -44,24 +43,27 @@
             android:label="@string/title_activity_pencapain_detail"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".tentang"
-            android:label="Tentang Kami"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity
             android:name=".ProfileActivity"
             android:label="Profile"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" />
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <receiver
+            android:name=".Alarm.AlarmRecivier"
+            android:process=":remote" />
+        <receiver
+            android:name=".Alarm.SecondAlarmRecivier"
+            android:process=":remote" />
+
+        <activity android:name=".TentangKami">
+            android:theme="@style/AppTheme.NoActionBar" />
         </activity>
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
-        <receiver android:name=".Alarm.AlarmRecivier"
-            android:process=":remote"/>
-        <receiver android:name=".Alarm.SecondAlarmRecivier"
-            android:process=":remote"/>
     </application>
 
 </manifest>
