--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="false"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/logoo2"
+        android:label="Remember Activities"
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme.NoActionBar.">
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar.">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -61,7 +62,8 @@
             android:name=".Alarm.SecondAlarmRecivier"
             android:process=":remote" />
 
-        <activity android:name=".TentangKami">
+        <activity android:name=".TentangKami"
+            android:label="Tentang Kami">
             android:theme="@style/AppTheme.NoActionBar" />
         </activity>
     </application>
