--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar.">
+        android:theme="@style/AppTheme"
+        >
         <activity android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar.">
             <intent-filter>
@@ -66,6 +67,7 @@
             android:label="Tentang Kami">
             android:theme="@style/AppTheme.NoActionBar" />
         </activity>
+
     </application>
 
 </manifest>
